--- a/css/responsive/tablet.css
+++ b/css/responsive/tablet.css
@@ -43,8 +43,8 @@
     }
     
     .release-art.video-container {
-        width: 90%;
-        max-width: 600px;
+        width: 95%;
+        max-width: 900px;
         aspect-ratio: 16/9;
     }
     
@@ -77,14 +77,7 @@
         font-size: 0.85rem;
     }
     
-    /* Platform logos tablet */
-    .platform-logo {
-        padding: 0 15px;
-    }
-    
-    .platforms-scroll {
-        height: 45px;
-    }
+    /* Platform logos tablet - voir header.css */
 }
 
 /* iPad specific adjustments */
@@ -98,7 +91,8 @@
     }
     
     .release-art.video-container {
-        max-width: 80%;
+        width: 95%;
+        max-width: 900px;
     }
 }
 
