--- a/css/sections/about.css
+++ b/css/sections/about.css
@@ -7,17 +7,22 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 4rem;
-    align-items: center;
+    align-items: start;
+    max-width: 1400px;
+    margin: 0 auto;
 }
 
 .about-image {
     position: relative;
-    height: 400px;
+    width: 100%;
+    height: 500px;
     border-radius: 10px;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: sticky;
+    top: 100px;
 }
 
 .about-image img {
@@ -100,17 +105,35 @@
 }
 
 /* Responsive About */
+@media (min-width: 1600px) {
+    .about-content {
+        max-width: 1600px;
+        gap: 5rem;
+    }
+
+    .about-image {
+        height: 600px;
+    }
+
+    .about-text p {
+        font-size: 1.15rem;
+        line-height: 1.9;
+    }
+}
+
 @media (max-width: 992px) {
     .about-content {
         grid-template-columns: 1fr;
         gap: 2rem;
     }
-    
+
     .about-image {
         height: 350px;
         order: -1; /* Image en premier sur tablettes */
+        position: relative;
+        top: 0;
     }
-    
+
     .about-text {
         padding: 0 1rem;
     }
@@ -120,35 +143,37 @@
     .about-image {
         height: 300px;
         margin-bottom: 1.5rem;
+        position: relative;
+        top: 0;
     }
-    
+
     .member-img {
         width: 55px;
         height: 55px;
     }
-    
+
     .about-text p {
         text-align: left;
         font-size: 1rem;
     }
-    
+
     /* Amélioration pour les membres du groupe sur tablette */
     .members-list {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
     }
-    
+
     .member-item {
         flex-direction: column;
         text-align: center;
     }
-    
+
     .member-img {
         margin-right: 0;
         margin-bottom: 10px;
     }
-    
+
     .read-more-btn {
         margin: 1rem auto;
         display: block;
