--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -1,6 +1,6 @@
 /* DANDYSHOES - Footer */
 footer {
-    background-color: rgba(20, 20, 20, 1);
+    background-color: transparent;
     padding: 4rem 2rem;
     text-align: center;
 }
