--- a/css/sections/about.css
+++ b/css/sections/about.css
@@ -1,6 +1,6 @@
 /* DANDYSHOES - About Section */
 .about-section {
-    background-color: var(--dark);
+    background-color: transparent;
 }
 
 .about-content {
