--- a/css/sections/music.css
+++ b/css/sections/music.css
@@ -1,6 +1,6 @@
 /* DANDYSHOES - Music Section */
 .music-section {
-    background-color: rgba(30, 30, 30, 1);
+    background-color: transparent;
 }
 
 .latest-release {
