--- a/css/sections/tour.css
+++ b/css/sections/tour.css
@@ -1,6 +1,6 @@
 /* DANDYSHOES - Tour Section */
 .tour-section {
-    background-color: rgba(30, 30, 30, 1);
+    background-color: transparent;
 }
 
 .tour-list {
