--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -36,7 +36,10 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Logo styling avec font améliorée */
 .logo {
-    font-size: 5rem
+    font-size: 5rem;
+    text-align: center;
+    width: 100%;
+    display: block;
 }
 
 /* Responsive typography */
