--- a/css/sections/music.css
+++ b/css/sections/music.css
@@ -32,7 +32,8 @@
 /* Conteneur adapté pour la vidéo YouTube 16:9 */
 .release-art.video-container {
     width: 100%;
-    max-width: 1400px;
+    max-width: 900px;
+    height: auto;
     position: relative;
     margin: 0 auto 2rem;
     background: transparent;
@@ -48,6 +49,7 @@
     position: relative;
     width: 100%;
     height: 100%;
+    padding-bottom: 56.25%; /* 16:9 ratio (9/16 = 0.5625) */
     border-radius: 20px;
     overflow: hidden;
     background: #000;
@@ -245,8 +247,9 @@
 /* Responsive music section */
 @media screen and (min-width: 993px) {
     .release-art.video-container {
-        width: 90%;
-        max-width: 1400px;
+        width: 80%;
+        max-width: 900px;
+        height: auto;
         aspect-ratio: 16/9;
     }
 }
@@ -264,7 +267,8 @@
 
     .release-art.video-container {
         width: 95%;
-        max-width: 900px;
+        max-width: 750px;
+        height: auto;
         aspect-ratio: 16/9;
     }
 }
